# didcomm-mediator

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  wallet.hold.example
.github/workflows/: docker.yml
didcomm-mediator-worker/: Cargo.toml  README.md  wrangler.toml
didcomm-mediator-worker/src/: connections.rs  lib.rs
examples/: didexchange.rs  discoverfeatures.rs  invitation.rs  ping.rs
src/: bin.rs  config.rs  connections.rs  diddoc.rs  didweb.rs  handler.rs  invitation.rs  keybytes.rs  lib.rs  main.rs  message.rs  service.rs  tests.rs  wallet.rs
src/protocols/: basicmessage.rs  didexchange.rs  discoverfeatures.rs  forward.rs  invitation.rs  messagepickup.rs  mod.rs  poll.rs  trustping.rs
src/resolver/: iota_resolver.rs  key_resolver.rs  mod.rs
