[package]
name = "didcomm-mediator"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayref = "0.3"
base58 = "0.2.0"
didcomm-rs = "0.7.2"
did-key = "*"
ed25519-dalek = { version = "1.0" }
hex = { version = "0.4.3", features = ["serde"] }
rand_core = "0.5"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
uuid = {version="1", features = ["v4"]}
x25519-dalek = "1.1"
