[package]
name = "didcomm_mediator"
version = "0.1.0"
edition = "2021"

[lib]
name = "didcomm_mediator"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "didcomm-mediator"
path = "src/bin.rs"
required-features = ["bin"]

[features]
default = []
bin = ["tokio", "rocket"]

[dependencies]
arrayref = "0.3"
base58 = "0.2.0"
chrono = "0.4"
didcomm-rs = { version = "0.7.2", git = "https://github.com/decentralized-identity/didcomm-rs" }
did-key = "*"
ed25519-dalek = { version = "1.0" }
hex = { version = "0.4.3", features = ["serde"] }
rand_core = "0.5"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"], optional = true }
uuid = { version = "1", features = ["serde", "v4"] }
x25519-dalek = "1.1"

[target.wasm32-unknown-unknown.dependencies]
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }

[[example]]
name = "didexchange"
required-features = ["bin"]

[[example]]
name = "discoverfeatures"
required-features = ["bin"]

[[example]]
name = "invitation"
required-features = ["bin"]

[[example]]
name = "ping"
required-features = ["bin"]