[package]
edition = "2021"
name = "didcomm_mediator"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "didcomm_mediator"
path = "src/lib.rs"

[[bin]]
name = "didcomm-mediator"
path = "src/bin.rs"
required-features = ["bin"]

[features]
bin = ["tokio", "rocket"]
iota = ["identity", "zeroize"]
default = ["bin", "iota"]

[dependencies]
arrayref = "0.3"
async-trait = "0.1.56"
async-mutex = "1.4.0"
base58 = "0.2.0"
chrono = "0.4"
did-key = "*"
didcomm-rs = { version = "0.7.2", git = "https://github.com/decentralized-identity/didcomm-rs" }
ddoresolver-rs = { version = "0.4" }
ed25519-dalek = { version = "1.0" }
hex = { version = "0.4.3", features = ["serde"] }
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "dev", features = [
    "account",
], optional = true }
rand_core = "0.5"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"], optional = true }
uuid = { version = "1", features = ["serde", "v4"] }
x25519-dalek = "1.1"
zeroize = { version = "1.4", optional = true }

[target.wasm32-unknown-unknown.dependencies]
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }

[[example]]
name = "didexchange"
required-features = ["bin"]

[[example]]
name = "discoverfeatures"
required-features = ["bin"]

[[example]]
name = "invitation"
required-features = ["bin"]

[[example]]
name = "ping"
required-features = ["bin"]
