[package]
name = "didcomm-mediator-worker"
version = "0.1.0"
authors = ["Christian M <chriamue@gmail.com>"]
edition = "2018"
description = "Cloudflare Worker for didcomm mediator"
license = "MIT"
repository = "https://github.com/chriamue/didcomm-mediator"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
base58 = "0.2"
cfg-if = "0.1.2"
didcomm_mediator = { path = "..", default-features = false }
didcomm-rs = {version = "0.7.2", git = "https://github.com/decentralized-identity/didcomm-rs"}
did-key = "*"
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.67"
worker = "0.0.9"
worker-kv = "0.5.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
